2012-04-14
  - Support for has_one associations (kbrock)

2012-04-05
  - Allow gems like simple_form to read metadata about belongs_to associations that point to active hash objects (kbrock)

2012-01-19
  - Move specs to appraisal (flavorjones)

2012-01-18 (v0.9.8)
  - Make ActiveHash.find with array raise an exception when record cannot be found (mocoso)

2011-09-18 (v0.9.7)
  - Fixing the setting of a belongs_to_active_hash association by association (not id).

2011-08-31
  - added a module which adds a .belongs_to_active_hash method to ActiveRecord, since it was broken for Rails 3.1 (thanks to felixclack for pointing this issue out)

2011-06-07
  - fixed bug where .find would not work if you defined your ids as strings

2011-06-05
  - fixed deprecation warnings for class_inheritable_accessor (thanks scudco!)
  - added basic compatibility with the `where` method from Arel (thanks rgarver!)

2011-04-19
  - better dependency management and compatibility with ActiveSupport 2.x (thanks vandrijevik!)

2011-01-22
  - improved method_missing errors for dynamic finders
  - prevent users from trying to overwrite :attributes (https://github.com/zilkey/active_hash/issues/#issue/33)

2010-12-08
  - ruby 1.9.2 compatibility

2010-12-06
  - added dependency on ActiveModel
  - add persisted? method to ActiveHash::Base
  - ActiveHash::Base#save takes *args to be compatible with ActiveModel
  - ActiveHash::Base#to_param returns nil if the object hasn't been saved

2010-11-09
  - Use Ruby's definition of "word character" (numbers, underscores) when forming ActiveHash::Enum constants (tstuart)

2010-11-07
  - Get ActiveHash::Associations to return a scope for has_many active record relationships (mocoso)

2010-10-20
  - Allow find_by_* methods to accept an options hash, so rails associations don't blow up

2010-10-07
  - Add conditions to ActiveHash#all (Ryan Garver)
  - Add #cache_key to ActiveHash::Base (Tom Stuart)