@@ -1,5 +1,5 @@
 module ActiveHash
   module Gem
-    VERSION = "0.9.10"
+    VERSION = "0.9.11"
   end
 end
